# IceScript

./: .gitignore  CMakeLists.txt
include/ice/: Encoding.hpp  Lexer.hpp  Memory.hpp  Message.hpp  Utility.hpp
include/ice/ast/: DeclNode.hpp  Node.hpp
include/ice/detail/: Config.hpp  TokenType.txt
src/: Encoding.cpp  Lexer.cpp  Main.cpp  Memory.cpp  Message.cpp  Utility.cpp
src/ast/: DeclNode.cpp  Node.cpp
src/detail/: EastAsianWidthTable.txt
util/: EastAsianWidthTableGenerator.py
